--- a/vividbot/experiment/datasets/viet_doc_vqa/refine.ipynb
+++ b/vividbot/experiment/datasets/viet_doc_vqa/refine.ipynb
@@ -261,10 +261,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import json\n",
+    "from pathlib import Path\n",
+    "\n",
+    "data = json.load(open(f\"{Path.home()}/data/viet_doc_vqa.json\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "79135"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [{**d, \"path\": \"Vividbot/viet-doc-vqa/images\"} for d in data]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f\"{Path.home()}/data/viet_doc_vqa.json\", \"w\") as f:\n",
+    "  json.dump(data, f, ensure_ascii=False, indent=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data2 = json.load(open(f\"{Path.home()}/data/viet_doc_vqa.json\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 0,\n",
+       " 'image': 'images/0.jpeg',\n",
+       " 'conversations': [{'from': 'human',\n",
+       "   'value': 'Cuốn sách trong ảnh thuộc bộ môn học nào?\\n<image>'},\n",
+       "  {'from': 'gpt', 'value': 'Cuốn sách trong ảnh thuộc bộ môn Ngữ văn.'},\n",
+       "  {'from': 'human', 'value': 'Cuốn sách dành cho học sinh lớp nào?'},\n",
+       "  {'from': 'gpt', 'value': 'Cuốn sách dành cho học sinh lớp 12.'},\n",
+       "  {'from': 'human', 'value': 'Cuốn sách được in lần thứ mấy?'},\n",
+       "  {'from': 'gpt', 'value': 'Cuốn sách được in lần thứ ba.'},\n",
+       "  {'from': 'human',\n",
+       "   'value': 'Ai là người chủ biên phần tiếng Việt của cuốn sách?'},\n",
+       "  {'from': 'gpt',\n",
+       "   'value': 'Bùi Minh Toàn là người chủ biên phần tiếng Việt của cuốn sách.'},\n",
+       "  {'from': 'human', 'value': 'Cuốn sách do đơn vị nào xuất bản?'},\n",
+       "  {'from': 'gpt',\n",
+       "   'value': 'Cuốn sách được xuất bản bởi Nhà xuất bản Giáo dục Việt Nam.'}],\n",
+       " 'path': 'Vividbot/viet-doc-vqa/images'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data2[0]"
+   ]
   }
  ],
  "metadata": {
