--- a/vividbot/experiment/datasets/viet_openvivqa/test.ipynb
+++ b/vividbot/experiment/datasets/viet_openvivqa/test.ipynb
@@ -24,6 +24,145 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4ed5af48f9944b5093eb153e95b1fa80",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading readme:   0%|          | 0.00/3.68k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bb8543919fc7456cb85f00f239eac583",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/175M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "65845490e6084073a3ff90b40abe1eeb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/168M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "302e88c5b9cf4627b651b67bc750eab6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/164M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ac5912a626f34fbcafdd48190645a083",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/161M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "00fbd63328664a93b9a2d6ed2a058e18",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/164M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "45d02fb5ee134f328ebd0069d4b67e93",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/168M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "590220eab042493ca5b49fe052b8eec0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/168M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "20022322777a4f02b46a00dcd7959ce8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split:   0%|          | 0/8024 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "# Login using e.g. `huggingface-cli login` to access this dataset\n",
+    "ds = load_dataset(\"5CD-AI/Viet-OpenViVQA-gemini-VQA\", split=\"train\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
@@ -41,58 +180,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "194dbabd2e14484d849549cfc5ce470e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "images.zip:   0%|          | 0.00/38.4M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "hf_processor.zip_and_upload_dir(\n",
-    "  dir_path=f\"{Path.home()}/data/vnhsge/images\",\n",
-    "  repo_id=\"Vividbot/vnhsge\",\n",
-    "  path_in_repo=\"images/images.zip\",\n",
-    "  repo_type=\"dataset\",\n",
-    "  overwrite=True,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hf_processor.upload_file(\n",
-    "  file_path=f\"{Path.home()}/data/vnhsge/vnhsge.json\",\n",
-    "  repo_id=\"Vividbot/vnhsge\",\n",
-    "  path_in_repo=\"vnhsge.json\",\n",
-    "  repo_type=\"dataset\",\n",
-    "  overwrite=True,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "840"
+       "8024"
       ]
      },
      "execution_count": 4,
@@ -112,25 +206,18 @@
     {
      "data": {
       "text/plain": [
-       "{'id': 1,\n",
-       " 'image': <PIL.Image.Image image mode=RGB size=1080x1721>,\n",
-       " 'description': 'Vua nước mía sầu riêng Quy Nhơn\\nSHIP: 0943029213-0348032888\\nVua mía topping 20k\\nMía sầu riêng 15k\\nMía cốt dừa 15k\\nMía cam tươi 15k\\nMía chanh dây 15k\\nMía đào 15k\\nMía tắc muối 12k\\nMía hạt chia 10k\\nMía truyền thống 8-10k\\nDưa dầm Hải Phòng 20k\\nDưa dầm sầu riêng 25k\\nSữa chua mít 20k\\nTrà tắc trân châu xí muội 17k\\nTrà đào 15k\\nTrà bí đào hạt chia 12k\\nTrà tắc 10k\\nNước sấu Hà Nội 15k\\nNước me đá dưa khô 15k',\n",
-       " 'extractions': \"{'Tên quán': 'Vua nước mía sầu riêng Quy Nhơn', 'Số điện thoại': '0943029213-0348032888', 'Danh sách món': ['Vua mía topping', 'Mía sầu riêng', 'Mía cốt dừa', 'Mía cam tươi', 'Mía chanh dây', 'Mía đào', 'Mía tắc muối', 'Mía hạt chia', 'Mía truyền thống', 'Dưa dầm Hải Phòng', 'Dưa dầm sầu riêng', 'Sữa chua mít', 'Trà tắc trân châu xí muội', 'Trà đào', 'Trà bí đào hạt chia', 'Trà tắc', 'Nước sấu Hà Nội', 'Nước me đá dưa khô'], 'Giá': ['20k', '15k', '15k', '15k', '15k', '15k', '12k', '10k', '8-10k', '20k', '25k', '20k', '17k', '15k', '12k', '10k', '15k', '15k']}\",\n",
-       " 'conversations': [{'role': 'user', 'content': 'Tên quán là gì?'},\n",
+       "{'id': 0,\n",
+       " 'image': <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=660x440>,\n",
+       " 'description': 'Bức ảnh chụp một chiếc xe bồn màu trắng, có dòng chữ \"HỆ THỐNG THÀNH PHỐ XANH - SẠCH - ĐẸP\" được in trên bồn chứa nước màu xanh dương.  Hai nhân viên y tế mặc đồ bảo hộ màu xanh dương đang đi bộ phía sau xe.  Phía trước xe là một cổng sắt màu đỏ, phía sau xe là một cái cây xanh.  Trời có nắng và bầu trời trong xanh.',\n",
+       " 'conversations': [{'role': 'user',\n",
+       "   'content': 'Những nhân viên y tế đang mang trang phục gì ?'},\n",
        "  {'role': 'assistant',\n",
-       "   'content': 'Tên quán là Vua nước mía sầu riêng Quy Nhơn.'},\n",
-       "  {'role': 'user', 'content': 'Số điện thoại của quán là gì?'},\n",
-       "  {'role': 'assistant',\n",
-       "   'content': 'Số điện thoại của quán là 0943029213-0348032888.'},\n",
-       "  {'role': 'user', 'content': 'Quán có bán món gì?'},\n",
-       "  {'role': 'assistant',\n",
-       "   'content': 'Quán có bán rất nhiều món, bao gồm các loại mía như mía sầu riêng, mía cốt dừa, mía cam tươi, mía chanh dây, mía đào, mía tắc muối, mía hạt chia, mía truyền thống, dưa dầm Hải Phòng, dưa dầm sầu riêng, sữa chua mít và các loại trà như trà tắc trân châu xí muội, trà đào, trà bí đào hạt chia, trà tắc, nước sấu Hà Nội, nước me đá dưa khô.'},\n",
-       "  {'role': 'user', 'content': 'Giá của món mía sầu riêng là bao nhiêu?'},\n",
-       "  {'role': 'assistant', 'content': 'Giá của món mía sầu riêng là 15k.'},\n",
+       "   'content': 'Những nhân viên y tế đang mang đồ bảo hộ y tế.'},\n",
+       "  {'role': 'user', 'content': 'Cái bồn trên xe có màu gì ?'},\n",
+       "  {'role': 'assistant', 'content': 'Cái bồn có màu trắng và màu xanh dương.'},\n",
        "  {'role': 'user',\n",
-       "   'content': 'Giá của món trà tắc trân châu xí muội là bao nhiêu?'},\n",
-       "  {'role': 'assistant',\n",
-       "   'content': 'Giá của món trà tắc trân châu xí muội là 17k.'}]}"
+       "   'content': 'Có bao nhiêu nhân viên y tế đi phía sau chiếc xe ?'},\n",
+       "  {'role': 'assistant', 'content': 'Có hai nhân viên y tế.'}]}"
       ]
      },
      "execution_count": 5,
@@ -144,63 +231,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Image' object has no attribute 'get_format_mimetype'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mds\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mimage\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_format_mimetype\u001b[49m()\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Image' object has no attribute 'get_format_mimetype'"
-     ]
-    }
-   ],
-   "source": [
-    "ds[0][\"image\"].get_format_mimetype()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "200it [00:01, 124.87it/s]\n",
-      "200it [00:02, 77.96it/s] \n",
-      "80it [00:01, 79.12it/s]]\n",
-      "80it [00:00, 91.87it/s]]\n",
-      "200it [00:03, 51.74it/s]\n",
-      "80it [00:00, 527.54it/s]\n"
+      "200it [00:00, 342.16it/s]\n",
+      "200it [00:00, 330.46it/s]\n",
+      "200it [00:00, 311.90it/s]\n",
+      "200it [00:00, 337.02it/s]\n",
+      "200it [00:00, 359.35it/s]\n",
+      "200it [00:00, 354.22it/s]\n",
+      "200it [00:00, 319.99it/s]\n",
+      "200it [00:00, 272.15it/s]\n",
+      "200it [00:00, 287.77it/s]\n",
+      "200it [00:00, 362.98it/s]\n",
+      "200it [00:00, 386.30it/s]\n",
+      "200it [00:00, 306.34it/s]\n",
+      "200it [00:00, 248.49it/s]\n",
+      "200it [00:00, 292.91it/s]\n",
+      "200it [00:00, 263.86it/s]\n",
+      "200it [00:00, 317.97it/s]\n",
+      "200it [00:00, 357.54it/s]\n",
+      "200it [00:00, 298.94it/s]\n",
+      "200it [00:00, 392.11it/s]\n",
+      "200it [00:00, 288.75it/s]\n",
+      "200it [00:00, 299.06it/s]\n",
+      "200it [00:00, 350.76it/s]\n",
+      "200it [00:00, 377.19it/s]\n",
+      "200it [00:00, 366.10it/s]\n",
+      "200it [00:00, 353.17it/s]\n",
+      "200it [00:00, 347.88it/s]\n",
+      "200it [00:00, 329.89it/s]\n",
+      "200it [00:00, 359.12it/s]\n",
+      "200it [00:00, 325.59it/s]\n",
+      "200it [00:00, 359.14it/s]\n",
+      "200it [00:00, 403.81it/s]\n",
+      "200it [00:00, 402.10it/s]\n",
+      "200it [00:00, 378.94it/s]\n",
+      "200it [00:00, 367.95it/s]\n",
+      "200it [00:00, 332.61it/s]\n",
+      "200it [00:00, 310.59it/s]\n",
+      "200it [00:00, 345.67it/s]\n",
+      "200it [00:00, 411.50it/s]\n",
+      "75it [00:00, 471.01it/s]\n",
+      "74it [00:00, 375.77it/s]\n",
+      "200it [00:00, 337.93it/s]\n",
+      "75it [00:00, 422.49it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "Dataset({\n",
-       "    features: ['id', 'image', 'description', 'extractions', 'conversations'],\n",
-       "    num_rows: 840\n",
+       "    features: ['id', 'image', 'description', 'conversations'],\n",
+       "    num_rows: 8024\n",
        "})"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "_DESCRIPTION_QUESTIONS = [\n",
-    "  \"Nội dung của menu trong hình ảnh là gì?\",\n",
-    "  \"Hãy trích xuất thông tin từ menu trong hình ảnh.\",\n",
-    "  \"Hãy mô tả menu trong hình ảnh.\",\n",
-    "  \"Hãy đọc nội dung của menu trong hình ảnh.\",\n",
-    "  \"Viết lại nội dung của thực đơn trong hình ảnh.\",\n",
+    "  \"Nội dung của hình ảnh là gì?\",\n",
+    "  \"Hãy mô tả hình ảnh này.\",\n",
+    "  \"Hãy cho biết nội dung của hình ảnh?\",\n",
+    "  \"Trong hình ảnh này có gì?\",\n",
+    "  \"Viết một đoạn mô tả về hình ảnh này.\",\n",
+    "  \"Bức ảnh này chụp về chủ đề gì?\",\n",
+    "  \"Đây là hình ảnh về gì?\",\n",
+    "  \"Đây là gì?\",\n",
+    "  \"Hình ảnh này là gì?\",\n",
+    "  \"Mô tả bức ảnh này.\",\n",
     "]\n",
     "\n",
     "\n",
@@ -214,7 +321,7 @@
     "    return np.random.choice(_DESCRIPTION_QUESTIONS)\n",
     "\n",
     "\n",
-    "DATA_NAME = \"viet-menu-vqa\"\n",
+    "DATA_NAME = \"viet-openvivqa\"\n",
     "DATA_NAME_ALT = DATA_NAME.replace(\"-\", \"_\")\n",
     "SAMPLE_COUNT = round(len(ds) / 1000)\n",
     "\n",
@@ -266,7 +373,6 @@
     "            \"id\": id,\n",
     "            \"image\": f\"images/{id}.{img_ext}\",\n",
     "            \"conversations\": conversations,\n",
-    "            \"path\": \"Vividbot/viet-menu-vqa/images\",\n",
     "          }\n",
     "        )\n",
     "\n",
@@ -283,7 +389,6 @@
     "              },\n",
     "              {\"from\": \"gpt\", \"value\": description},\n",
     "            ],\n",
-    "            \"path\": \"Vividbot/viet-menu-vqa/images\",\n",
     "          }\n",
     "        )\n",
     "\n",
@@ -323,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +437,7 @@
        "[]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,15 +448,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "840\n",
-      "840\n"
+      "8024\n",
+      "8024\n"
      ]
     }
    ],
@@ -372,14 +477,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "combined_data = processed_detail_data + processed_conversation_data\n",
     "\n",
     "combined_data = sorted(combined_data, key=lambda x: x[\"id\"])\n",
-    "combined_data = [{**d, \"path\": \"Vividbot/viet-menu-vqa/images\"} for d in combined_data]\n",
+    "combined_data = [{**d, \"path\": f\"Vividbot/{DATA_NAME}/images\"} for d in combined_data]\n",
     "\n",
     "with open(f\"{Path.home()}/data/{DATA_NAME}/{DATA_NAME_ALT}.jsonl\", \"w\") as f:\n",
     "  for d in combined_data:\n",
@@ -465,18 +570,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1739af8ae2cc4f02ac015169a1e08353",
+       "model_id": "e15a0c97049f4b5eb11256e3724b51ca",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "images.zip:   0%|          | 0.00/314M [00:00<?, ?B/s]"
+       "images.zip:   0%|          | 0.00/1.16G [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -495,9 +600,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e2f463f264184dd3a948579340de54f9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "viet_openvivqa.jsonl:   0%|          | 0.00/12.2M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bb8ea5d52c7247d7b32bbd00fd3f13e4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "viet_openvivqa.json:   0%|          | 0.00/14.6M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "hf_processor.upload_file(\n",
     "  file_path=f\"{Path.home()}/data/{DATA_NAME}/{DATA_NAME_ALT}.jsonl\",\n",
@@ -534,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,16 +677,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1680"
+       "19188"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,86 +697,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import json\n",
-    "from pathlib import Path\n",
-    "\n",
-    "data = json.load(open(f\"{Path.home()}/data/vnhsge.json\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7127"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'id': 'Civ_1_1',\n",
-       " 'conversations': [{'from': 'system',\n",
-       "   'value': 'Bạn là chuyên gia về kiến thức trắc nghiệm trong kỳ thi Trung học Phổ thông Quốc gia (THPTQG). Hãy giúp người dùng trả lời câu hỏi và đưa ra lời giải thích hợp lý.'},\n",
-       "  {'from': 'human',\n",
-       "   'value': 'Câu 1:Sự tác động của con người vào tự nhiên, biến đổi các yếu tố của tự nhiên để tạo ra các sản phẩm phù hợp với nhu cầu của con người là nội dung của khái niệm\\nA.\\xa0phát triển kinh tế.\\nB.\\xa0sản xuất của cải vật chất.\\nC.\\xa0quá trình lao động.\\nD.\\xa0quá trình sản xuất.'},\n",
-       "  {'from': 'gpt',\n",
-       "   'value': 'Đáp án: B\\n\\nGiải thích: Sự tác động của con người vào tự nhiên, biến đổi các yếu tố của tự nhiên để tạo ra các sản phẩm phù hợp với nhu cầu của con người là nội dung của khái niệm sản xuất của cải vật chất\\nChọn đáp án B'}]}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = [\n",
-    "  {\n",
-    "    **d,\n",
-    "    \"path\": \"Vividbot/vnhsge/images\",\n",
-    "  }\n",
-    "  for d in data\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(f\"{Path.home()}/data/vnhsge.json\", \"w\") as f:\n",
-    "  json.dump(data, f, ensure_ascii=False, indent=2)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
