--- a/vividbot/experiment/datasets/vietnamese_meta_math/test.ipynb
+++ b/vividbot/experiment/datasets/vietnamese_meta_math/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -22,21 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datasets import load_dataset\n",
-    "\n",
-    "# Login using e.g. `huggingface-cli login` to access this dataset\n",
-    "ds = load_dataset(\n",
-    "  \"5CD-AI/Vietnamese-Openorca-Multiplechoice-gg-translated\", split=\"train\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,27 +37,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "10000"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
-    "len(ds)"
+    "import orjson\n",
+    "\n",
+    "data = []\n",
+    "\n",
+    "with open(f\"{Path.home()}/data/vietnamese_tiny_cot_alpaca_raw.json\") as f:\n",
+    "  raw_data = orjson.loads(f.read())\n",
+    "  raw_data_id = 0\n",
+    "  print(len(raw_data))\n",
+    "\n",
+    "  for i in range(20000):\n",
+    "    while True:\n",
+    "      item = raw_data[raw_data_id]\n",
+    "      print(item)\n",
+    "      human_message = item[\"instruction_vi\"]\n",
+    "      gpt_message = item[\"output_vi\"]\n",
+    "\n",
+    "      if len(human_message.split(\" \")) + len(gpt_message.split(\" \")) < 2500:\n",
+    "        data.append(\n",
+    "          {\n",
+    "            \"id\": len(data),\n",
+    "            \"conversations\": [\n",
+    "              {\"from\": \"human\", \"value\": human_message},\n",
+    "              {\"from\": \"gpt\", \"value\": gpt_message},\n",
+    "            ],\n",
+    "          }\n",
+    "        )\n",
+    "        break\n",
+    "\n",
+    "with open(f\"{Path.home()}/data/vietnamese_tiny_cot_alpaca.json\", \"w\") as f:\n",
+    "  json.dump(data, f, ensure_ascii=False, indent=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mlen\u001b[39m(\u001b[43mdata\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
