--- a/vividbot/experiment/datasets/vivid_instruct_65k/image/refine.ipynb
+++ b/vividbot/experiment/datasets/vivid_instruct_65k/image/refine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,10 +251,10 @@
     "    conv[0][\"value\"] = conv[0][\"value\"].strip()\n",
     "    conv[1][\"value\"] = conv[1][\"value\"].strip()\n",
     "    if (\n",
-    "      len(conv[1][\"value\"].split(\" \")) > 10\n",
-    "      and len(conv[1][\"value\"].split(\" \")) < 80\n",
-    "      and len(conv[0][\"value\"].split(\" \")) > 2\n",
-    "      and len(conv[0][\"value\"].split(\" \")) < 40\n",
+    "      len(conv[0][\"value\"].split(\" \")) > 2\n",
+    "      and len(conv[0][\"value\"].split(\" \")) < 60\n",
+    "      and len(conv[1][\"value\"].split(\" \")) > 10\n",
+    "      and len(conv[1][\"value\"].split(\" \")) < 300\n",
     "    ):\n",
     "      new_conv.extend(conv)\n",
     "  if len(new_conv) > 0:\n",
@@ -263,26 +263,31 @@
     "    for i in range(0, len(new_conv), 2):\n",
     "      try:\n",
     "        total_word_count += total_word_count + len(new_conv[i][\"value\"].split(\" \"))\n",
-    "        if total_word_count < 1000:\n",
+    "        if total_word_count < 3000:\n",
     "          d_copy[\"conversations\"].extend(new_conv[i : i + 2])\n",
     "        total_word_count += len(new_conv[i + 1][\"value\"].split(\" \"))\n",
     "      except:\n",
     "        pass\n",
+    "    if \"<image>\" not in d_copy[\"conversations\"][0][\"value\"]:\n",
+    "      d_copy[\"conversations\"][0][\"value\"] = (\n",
+    "        \"<image>\\n\" + d_copy[\"conversations\"][0][\"value\"]\n",
+    "      )\n",
+    "\n",
     "    new_data.append(d_copy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "54338"
+       "54484"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +306,8 @@
       "text/plain": [
        "{'id': '915363097db803a7051ae24e1a4d03db',\n",
        " 'image': 'images/915363097db803a7051ae24e1a4d03db.jpg',\n",
-       " 'conversations': [{'from': 'human', 'value': 'Họ đang làm gì trên bãi biển?'},\n",
+       " 'conversations': [{'from': 'human',\n",
+       "   'value': '<image>\\nHọ đang làm gì trên bãi biển?'},\n",
        "  {'from': 'gpt',\n",
        "   'value': 'Họ đang đứng trên bãi biển, giơ tay lên chào tạm biệt biển.'},\n",
        "  {'from': 'human', 'value': 'Bầu trời trong bức ảnh như thế nào?'},\n",
@@ -312,7 +318,7 @@
        " 'category': 'Entertainment'}"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,36 +347,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'id': '5a739efa08ecdf9eecca5bb491d70458',\n",
-       " 'image': 'images/5a739efa08ecdf9eecca5bb491d70458.jpg',\n",
+       "{'id': '45da00de788e2804f798c26b0b556241',\n",
+       " 'image': 'images/45da00de788e2804f798c26b0b556241.png',\n",
        " 'conversations': [{'from': 'human',\n",
-       "   'value': 'Chiến dịch Hồ Chí Minh là chiến dịch quân sự lớn nhất của quân đội Việt Nam trong cuộc chiến tranh nào?\\n<image>'},\n",
+       "   'value': 'Theo số liệu được cung cấp trong hình ảnh, thiệt hại do tội phạm mạng đã tăng bao nhiêu lần từ năm 2019 đến năm 2025?\\n<image>'},\n",
        "  {'from': 'gpt',\n",
-       "   'value': 'Chiến dịch Hồ Chí Minh là chiến dịch quân sự lớn nhất của Quân đội Nhân dân Việt Nam trong cuộc chiến tranh Việt Nam, diễn cuộc kháng chiến chống Mỹ cứu nước của dân tộc Việt Nam đi đến thắng lợi hoàn toàn.'},\n",
+       "   'value': 'Theo hình ảnh, thiệt hại do tội phạm mạng đã tăng từ 4 tỷ đô la vào năm 2019 lên 28 tỷ đô la vào năm 2025, tức là tăng gấp 7 lần.'},\n",
        "  {'from': 'human',\n",
-       "   'value': 'Lực lượng quân đội Việt Nam và quân đội Mỹ có bao nhiêu quân số trong chiến dịch Hồ Chí Minh?'},\n",
+       "   'value': 'Tại sao các cuộc tấn công mạng ngày càng gia tăng? Liệt kê ba lý do chính được nêu trong hình ảnh.'},\n",
        "  {'from': 'gpt',\n",
-       "   'value': 'Lực lượng quân đội Việt Nam có 250.000 quân chủ lực, 20.000 quân địa phương và du kích, 180.000 dân công phục vụ hậu cần chiến dịch. Lực lượng quân đội Mỹ có 14.700 quân chủ lực, 405.300 quân tập trung.'},\n",
+       "   'value': 'Các cuộc tấn công mạng ngày càng gia tăng do ba lý do chính: (1) Cơ hội tấn công mở rộng: ngày càng nhiều người và thiết bị kết nối internet, tạo ra nhiều mục tiêu tiềm năng hơn; (2)  Sự gia tăng của các thiết bị: số lượng thiết bị kết nối internet ngày càng tăng, tạo ra nhiều điểm yếu tiềm ẩn cho kẻ tấn công; (3)  Lượng dữ liệu ngày càng lớn: lượng dữ liệu trên thế giới ngày càng tăng, trong đó một nửa được lưu trữ trên đám mây, tạo ra nhiều cơ hội cho kẻ tấn công khai thác.'},\n",
        "  {'from': 'human',\n",
-       "   'value': 'Quân đội Việt Nam sử dụng bao nhiêu xe tăng, xe thiết giáp, pháo, máy bay trong chiến dịch Hồ Chí Minh?'},\n",
+       "   'value': 'Theo hình ảnh, tỷ lệ doanh nghiệp nhỏ và vừa (SMB) bị tấn công mạng trong năm qua là bao nhiêu? Tỷ lệ doanh nghiệp phải đóng cửa trong vòng 6 tháng sau khi bị tấn công mạng là bao nhiêu?'},\n",
        "  {'from': 'gpt',\n",
-       "   'value': 'Quân đội Việt Nam sử dụng 265 xe tăng, 127 xe thiết giáp, 241 pháo xe kéo, hơn 400 pháo cao xạ, 1600 xe kỹ thuật chiến đấu, 500 tên lửa, pháo phòng không. Quân đội Mỹ sử dụng 1117 xe tăng và xe thiết giáp, 772 pháo cỡ lớn, 1431 tàu và xuồng chiến đấu, hơn 1200 máy bay.'},\n",
+       "   'value': 'Theo hình ảnh, 66% doanh nghiệp nhỏ và vừa (SMB) bị tấn công mạng trong năm qua. 60% doanh nghiệp phải đóng cửa trong vòng 6 tháng sau khi bị tấn công mạng.'},\n",
        "  {'from': 'human',\n",
-       "   'value': 'Quân đội Việt Nam và quân đội Mỹ bị thiệt hại bao nhiêu xe tăng, pháo, máy bay trong chiến dịch Hồ Chí Minh?'},\n",
+       "   'value': 'Hình ảnh cho thấy bảo hiểm mạng có thể bao gồm những gì? Bảo hiểm mạng không bao gồm những gì?'},\n",
        "  {'from': 'gpt',\n",
-       "   'value': 'Quân đội Việt Nam bị thiệt hại 33 xe tăng bị cháy và hỏng. Quân đội Mỹ bị thiệt hại 400 xe tăng bị cháy và hỏng, hơn 500 khẩu pháo, 600 tàu chiến, hơn 400 xe tăng - thiết giáp, 3000 xe các loại, 800 máy bay, toàn bộ kho tăng bị thu giữ.'}],\n",
-       " 'timestamp': 1722435725,\n",
-       " 'keyword': 'địa lý Việt Nam',\n",
-       " 'category': 'Education'}"
+       "   'value': 'Bảo hiểm mạng có thể bao gồm: thiệt hại lợi nhuận, bao gồm thiệt hại về danh tiếng hoặc hoạt động bị đình trệ; trách nhiệm pháp lý, bao gồm các khoản phạt hợp đồng và tiền phạt truyền thông; kiện tụng, bao gồm kiện tập thể và điều tra của cơ quan quản lý. Bảo hiểm mạng không bao gồm: tài sản vật chất, thay thế tài sản bị hư hỏng hoặc bị đánh cắp; mất lợi nhuận trong tương lai, mất lợi nhuận dài hạn sau khi bị tấn công mạng; tài sản trí tuệ, mất giá trị của công ty sau khi dữ liệu bị rò rỉ.'},\n",
+       "  {'from': 'human',\n",
+       "   'value': 'Theo hình ảnh, tại sao việc thanh toán tiền chuộc cho tội phạm mạng ngày càng trở nên khó khăn hơn?'},\n",
+       "  {'from': 'gpt',\n",
+       "   'value': 'Theo hình ảnh, việc thanh toán tiền chuộc cho tội phạm mạng ngày càng trở nên khó khăn hơn do nhu cầu thanh toán tiền chuộc tăng cao, khiến việc bảo hiểm trở nên đắt đỏ hơn. Nhiều công ty bảo hiểm đã ngừng bảo hiểm các khoản thanh toán tiền chuộc, thay vào đó là giới hạn phạm vi bảo hiểm cho các thiệt hại khác.'}],\n",
+       " 'timestamp': 1722435025,\n",
+       " 'keyword': 'cybersecurity',\n",
+       " 'category': 'Technology'}"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,15 +396,15 @@
    "outputs": [],
    "source": [
     "new_data = [\n",
-    "  {**x, \"conversations\": x[\"conversations\"][:6]}\n",
-    "  for x in sorted_data\n",
+    "  {**x, \"conversations\": x[\"conversations\"][:10]}\n",
+    "  for x in sorted_new_data\n",
     "  if len(x[\"conversations\"][1][\"value\"].split(\" \")) > 10\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,16 +413,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "54338"
+       "54484"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +442,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 'fffc6aaf3db17a781cfdb39e9608e3d4',\n",
+       " 'image': 'images/fffc6aaf3db17a781cfdb39e9608e3d4.jpg',\n",
+       " 'conversations': [{'from': 'human',\n",
+       "   'value': '<image>\\nLoại máy chơi game cầm tay này là gì?'},\n",
+       "  {'from': 'gpt',\n",
+       "   'value': 'Đây là một chiếc máy chơi game cầm tay Game Boy Color.'},\n",
+       "  {'from': 'human', 'value': 'Hình ảnh nào được in trên máy chơi game?'},\n",
+       "  {'from': 'gpt',\n",
+       "   'value': 'Hình ảnh được in trên máy chơi game là biểu tượng của ban nhạc Joy Division, một ban nhạc rock người Anh.'}],\n",
+       " 'timestamp': 1722420453,\n",
+       " 'keyword': 'game retro',\n",
+       " 'category': 'Gaming',\n",
+       " 'path': 'Vividbot/vivid-image-instruct/images'}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_data[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
