--- a/vividbot/experiment/datasets/viet_handwriting_gemini_vqa/test.ipynb
+++ b/vividbot/experiment/datasets/viet_handwriting_gemini_vqa/test.ipynb
@@ -17,7 +17,7 @@
     }
    ],
    "source": [
-    "!huggingface-cli login --token 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"
+    "!huggingface-cli login --token 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"
    ]
   },
   {
@@ -28,7 +28,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7bbf3297b25e46e4a4a3537e38605f7e",
+       "model_id": "a476d2bdeb994e7dbf7fa70fa151c950",
        "version_major": 2,
        "version_minor": 0
       },
@@ -42,7 +42,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e923c08ef6d48edb39696aa419a9ec4",
+       "model_id": "195cb03c2daf45239e06ca45725f1d6c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -56,7 +56,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dba984ce78ae405a86961b8e999fd16e",
+       "model_id": "c4e28335b99f4a03a2542e9400e1936d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -70,7 +70,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1bcde11c9c94b3cb6cf0e8261a0b5e3",
+       "model_id": "632638592bcf4004a340595cc61b9c88",
        "version_major": 2,
        "version_minor": 0
       },
@@ -84,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f36649c104144baa91c189011760d2e",
+       "model_id": "2dd544ab6a7b47e9a50264aff53a2748",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b0bc00544a34beb9d97bd6494fe0f27",
+       "model_id": "1c5fd67efee04ac6bcec50d82c956552",
        "version_major": 2,
        "version_minor": 0
       },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "1252"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "   'content': 'Câu hỏi này không có câu trả lời chính xác, tùy thuộc vào quan điểm của mỗi người.'}]}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,22 +199,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "200it [00:00, 360.20it/s]\n",
-      "200it [00:00, 340.55it/s]\n",
-      "200it [00:00, 300.27it/s]\n",
-      "200it [00:00, 323.82it/s]\n",
-      "200it [00:00, 298.84it/s]\n",
-      "200it [00:00, 353.75it/s]\n",
-      "17it [00:00, 378.05it/s]\n",
-      "18it [00:00, 264.38it/s]\n",
-      "17it [00:00, 278.72it/s]\n"
+      "200it [00:00, 23852.96it/s]\n",
+      "200it [00:00, 30211.80it/s]\n",
+      "200it [00:00, 37519.49it/s]\n",
+      "200it [00:00, 34232.23it/s]\n",
+      "200it [00:00, 41026.11it/s]\n",
+      "200it [00:00, 44667.77it/s]\n",
+      "18it [00:00, 24385.49it/s]\n",
+      "17it [00:00, 19658.99it/s]\n",
+      "17it [00:00, 22095.81it/s]\n"
      ]
     },
     {
@@ -226,7 +226,7 @@
        "})"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
     "      )\n",
     "    )\n",
     "  ):\n",
-    "    conversations = [convert_message(message) for message in conversations][:6]\n",
+    "    conversations = [convert_message(message) for message in conversations]\n",
     "    if len(conversations) == 0:\n",
     "      continue\n",
     "\n",
@@ -335,12 +335,7 @@
     "            else f\"{get_random_description_question(id=i)}\\n<image>\",\n",
     "          },\n",
     "          {\"from\": \"gpt\", \"value\": description},\n",
-    "          {\n",
-    "            \"from\": \"human\",\n",
-    "            \"value\": f\"<image>\\n{get_random_label_question(id=i)}\"\n",
-    "            if i % 2 == 0\n",
-    "            else f\"{get_random_label_question(id=i)}\\n<image>\",\n",
-    "          },\n",
+    "          {\"from\": \"human\", \"value\": f\"{get_random_label_question(id=i)}\"},\n",
     "          {\"from\": \"gpt\", \"value\": label},\n",
     "        ],\n",
     "      }\n",
@@ -370,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,14 +503,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "No files have been modified since last commit. Skipping to prevent empty commit.\n",
       "No files have been modified since last commit. Skipping to prevent empty commit.\n"
      ]
     }
@@ -530,9 +524,9 @@
     ")\n",
     "\n",
     "hf_processor.upload_file(\n",
-    "  file_path=f\"{Path.home()}/data/{DATA_NAME}/{DATA_NAME_ALT}_{SAMPLE_COUNT*2}k_all.json\",\n",
+    "  file_path=f\"{Path.home()}/data/{DATA_NAME}/viet_handwriting_vqa.json\",\n",
     "  repo_id=f\"Vividbot/{DATA_NAME}\",\n",
-    "  path_in_repo=f\"{DATA_NAME_ALT}_{SAMPLE_COUNT*2}k_all.json\",\n",
+    "  path_in_repo=\"viet_handwriting_vqa.json\",\n",
     "  repo_type=\"dataset\",\n",
     "  overwrite=True,\n",
     ")\n",
@@ -556,10 +550,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hf_processor.upload_file(\n",
+    "  file_path=f\"{Path.home()}/data/{DATA_NAME}/detail_{SAMPLE_COUNT}k.jsonl\",\n",
+    "  repo_id=f\"Vividbot/{DATA_NAME}\",\n",
+    "  path_in_repo=f\"detail_{SAMPLE_COUNT}k.jsonl\",\n",
+    "  repo_type=\"dataset\",\n",
+    "  overwrite=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from pathlib import Path\n",
+    "\n",
+    "data = json.load(open(f\"{Path.home()}/data/viet_handwriting_vqa.json\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [{**d, \"path\": \"Vividbot/viet-handwriting-vqa/images\"} for d in data]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f\"{Path.home()}/data/viet_handwriting_vqa.json\", \"w\") as f:\n",
+    "  f.write(json.dumps(data, ensure_ascii=False, indent=2))"
+   ]
   }
  ],
  "metadata": {
